# dinput8

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: build.yml
src/: detours.cpp  detours.h  dinput8.def  dinput8_proxy.cpp  dinput8_proxy.h  dllmain.cpp  exports.def  utils.cpp  utils.h  version_proxy.cpp  version_proxy.h
